# DOOM_PP

./: .clang-format  .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  format_code.sh
.github/workflows/: ci.yml
m4/: ax_cxx_compile_stdcxx_11.m4  ax_prog_tar.m4  ax_prog_wget.m4
src/: Makefile.am  main.cpp
src/game/: game_logic.cpp  game_logic.h
src/renderer/: vulkan_renderer.cpp  vulkan_renderer.h
tests/unit/: Makefile.am  main_test.cpp
